# ChatServer

./: CMakeLists.txt  README.md  database_backup.sql
include/: public.h
include/client/: main.h
include/server/: chatserver.h  chatservice.h  database.h  friendmodel.h  group.h  groupmodel.h  groupuser.h  offlinemsgmodel.h  redis.h  user.h  usermodel.h
src/client/: main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  database.cpp  friendmodel.cpp  groupmodel.cpp  main.cpp  offlinemsgmodel.cpp  redis.cpp  usermodel.cpp
